--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,10 +22,7 @@
           <a class="nav-link" href="/order">Orders</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/orderLineItem">Lines</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/puppy">Puppies</a>
+          <a class="nav-link" href="/orderlineitem">Lines</a>
         </li>
 
         <!-- view-source:https://fezvrasta.github.io/bootstrap-material-design/docs/4.0/examples/navbars/ -->
