--- a/views/orderLineItem/create.ejs
+++ b/views/orderLineItem/create.ejs
@@ -8,15 +8,15 @@
       <br>
       <% 
       maxID=0; 
-      for (var i=0; i < orderLineItems.query.length; i++) {
-        if(orderLineItems.query[i]._id > maxID) { 
-          maxID=orderLineItems.query[i]._id;  
+      for (var i=0; i < orderlineitems.length; i++) {
+        if(orderlineitems[i]._id > maxID) { 
+          maxID=orderlineitems[i]._id;  
         }
       }
       %>
       <div class="content">
         <div>
-          <form name="orderLineItem" method="POST" action="/orderLineItem/save">
+          <form name="orderlineitem" method="POST" action="/orderlineitem/save">
 
             <div class="form-group" id=frm>
               <label for="_id">ID</label>
@@ -31,7 +31,7 @@
             </div>
           </form>
 
-          <form method="get" action="/orderLineItem">
+          <form method="get" action="/orderlineitem">
             <input type="submit" value="Return to list" class="btn btn-caution" />
           </form>
 
