--- a/views/orderLineItem/delete.ejs
+++ b/views/orderLineItem/delete.ejs
@@ -4,20 +4,20 @@
   <div class=row>
     <div class="col col-md-12">
 
-      <h2>Confirm deletion of orderLineItem line item</h2>
+      <h2>Confirm deletion of orderlineitem line item</h2>
       <br>
-      <br> ID: <%=  orderLineItem._id %>
-      <br> orderID: <%=orderLineItem.orderID%>
-      <br> lineNumber: <%=orderLineItem.lineNumber%>
-      <br> productID: <%=orderLineItem.productID%>
-      <br> quantity: <%=orderLineItem.quantity%>
+      <br> ID: <%=  orderlineitem._id %>
+      <br> orderID: <%=orderlineitem.orderID%>
+      <br> lineNumber: <%=orderlineitem.lineNumber%>
+      <br> productID: <%=orderlineitem.productID%>
+      <br> quantity: <%=orderlineitem.quantity%>
       <hr>
       
-      <form method="get" action="/orderLineItem">
+      <form method="get" action="/orderlineitem">
         <input type="submit" value="Return to list" class="btn btn-caution" />
       </form>
 
-      <form method="POST" action="/orderLineItem/delete/<%= orderLineItem._id %>">
+      <form method="POST" action="/orderlineitem/delete/<%= orderlineitem._id %>">
         <input type="submit" value="Delete this item" class="btn btn-danger pull-right" />
       </form>
 
