--- a/views/orderLineItem/details.ejs
+++ b/views/orderLineItem/details.ejs
@@ -6,14 +6,14 @@
 
       <h2>Order line item details</h2>
       <br>
-      <br> ID: <%=  orderLineItem._id %>
-      <br> orderID: <%=orderLineItem.orderID%>
-      <br> lineNumber: <%=orderLineItem.lineNumber%>
-      <br> productID: <%=orderLineItem.productID%>
-      <br> quantity: <%=orderLineItem.quantity%>
+      <br> ID: <%=  orderlineitem._id %>
+      <br> orderID: <%=orderlineitem.orderID%>
+      <br> lineNumber: <%=orderlineitem.lineNumber%>
+      <br> productID: <%=orderlineitem.productID%>
+      <br> quantity: <%=orderlineitem.quantity%>
       <hr>
 
-      <form method="get" action="/orderLineItem">
+      <form method="get" action="/orderlineitem">
         <input type="submit" value="Return to list" class="btn btn-caution" />
       </form>
 
