--- a/views/orderLineItem/index.ejs
+++ b/views/orderLineItem/index.ejs
@@ -3,33 +3,33 @@
 <div class="container-fluid">
   <div class=row>
     <div class="col col-md-12">
-      <a href="orderLineItem/create" class="btn btn-primary new">
+      <a href="orderlineitem/create" class="btn btn-primary new">
         Create a new order line item
       </a>
 
       <h2>Recent entries</h2>
       <p>There are
-        <%= orderLineItems.query.length %> order line items.
+        <%= orderlineitems.length %> order line items.
         <br>
       </p>
-      <% for (var i = orderLineItems.query.length-1; i >= 0; i--) {   
-        orderLineItem = orderLineItems.query[i];   %>
+      <% for (var i = orderlineitems.length-1; i >= 0; i--) {   
+        orderlineitem = orderlineitems[i];   %>
 
       <div class="panel panel-default">
         <div class="panel-heading"></div>
         <div class="text-muted pull-right"></div>
         <div class="panel-body">
 
-          <br> ID: <%=  orderLineItem._id %>
-          <br> orderID: <%=orderLineItem.orderID%>
-          <br> lineNumber: <%=orderLineItem.lineNumber%>
-          <br> productID: <%=orderLineItem.productID%>
-          <br> quantity: <%=orderLineItem.quantity%>
+          <br> ID: <%=  orderlineitem._id %>
+          <br> orderID: <%=orderlineitem.orderID%>
+          <br> lineNumber: <%=orderlineitem.lineNumber%>
+          <br> productID: <%=orderlineitem.productID%>
+          <br> quantity: <%=orderlineitem.quantity%>
 
           <hr>
-          <a href="/orderLineItem/delete/<%= orderLineItem._id  %>" class="btn btn-danger"> Delete </a>
-          <a href="/orderLineItem/details/<%= orderLineItem._id %>" class="btn btn-info"> Details </a>
-          <a href="/orderLineItem/edit/<%= orderLineItem._id %>" class="btn btn-primary"> Edit </a>
+          <a href="/orderlineitem/delete/<%= orderlineitem._id  %>" class="btn btn-danger"> Delete </a>
+          <a href="/orderlineitem/details/<%= orderlineitem._id %>" class="btn btn-info"> Details </a>
+          <a href="/orderlineitem/edit/<%= orderlineitem._id %>" class="btn btn-primary"> Edit </a>
           <hr>
           <hr>
         </div>
