--- a/views/orderLineItem/partial_edit.ejs
+++ b/views/orderLineItem/partial_edit.ejs
@@ -5,25 +5,25 @@
     <div class="form-group">
       <label for="orderID">orderID</label>
       <input onchange="onFormChange()" type="number" class="form-control" id="orderID" name="orderID"
-        value="<%= orderLineItem.orderID %>" required>
+        value="<%= orderlineitem.orderID %>" required>
     </div>
 
     <div class="form-group">
       <label for="lineNumber">lineNumber</label>
       <input onchange="onFormChange()" type="number" class="form-control" id="lineNumber" name="lineNumber"
-        value="<%= orderLineItem.lineNumber %>" required>
+        value="<%= orderlineitem.lineNumber %>" required>
     </div>
 
     <div class="form-group">
       <label for="productID">productID </label>
       <input onchange="onFormChange()" type="number" class="form-control" id="productID" name="productID" 
-      value="<%= orderLineItem.productID %>" required>
+      value="<%= orderlineitem.productID %>" required>
     </div>
 
     <div class="form-group">
       <label for="age">quantity</label>
       <input onchange="onFormChange()" type="number" class="form-control" id="quantity" name="quantity"
-        value="<%= orderLineItem.quantity %>" required>
+        value="<%= orderlineitem.quantity %>" required>
     </div>
   </div>
 </div>
