--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -9,11 +9,11 @@
 
       <h2>Recent entries</h2>
       <p>There are
-        <%= products.query.length %> products.
+        <%= products.length %> products.
         <br>
       </p>
-      <% for (var i = products.query.length-1; i >= 0; i--) {   
-        product = products.query[i];   %>
+      <% for (var i = products.length-1; i >= 0; i--) {   
+        product = products[i];   %>
       <div class="panel panel-default">
         <div class="panel-heading"></div>
         <div class="text-muted pull-right"></div>
